smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/dangling-with.smithy
// Parse error at line 6, column 1 near ``: Expected a valid identifier character, but found ''
$version: "2"
namespace com.foo

structure Foo with
